# ComputerGraphicsCW

./: CMakeLists.txt  addlight.cpp  addlight.hpp  atxmotherboard.hpp  atxmotherboardconfig.cpp  atxmotherboardconfig.hpp  basemotherboardconfig.hpp  colorconfig.cpp  colorconfig.hpp  componentprimitives.cpp  componentprimitives.hpp  config.hpp  configmanager.cpp  configmanager.hpp  configmotherboards.hpp  cpuconfig.cpp  cpuconfig.hpp  createscene.cpp  createscene.hpp  drawer.cpp  drawer.hpp  facade.cpp  facade.hpp  facet.cpp  facet.hpp  gpuconfig.cpp  gpuconfig.hpp  light.cpp  light.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mathelems.cpp  mathelems.hpp  microatxmotherboard.cpp  microatxmotherboard.hpp  microatxmotherboardconfig.cpp  microatxmotherboardconfig.hpp  miniitxmotherboard.hpp  (+24 more)
